afterlooking at other assignments... changed some stuff

--- a/weekX/hough3.html
+++ b/weekX/hough3.html
@@ -50,7 +50,7 @@
     //console.log('image loaded called')
     var blobs = houghHelpers.findBlobs(acc, threshold)
     houghHelpers.drawLines(acc, blobs.points, document.getElementById('can2db'))
-    drawBlobDetection(blobs)
+    //drawBlobDetection(blobs)
   }
 
   function drawBlobDetection(blobs) {
