--- a/week8/polymerBS.html
+++ b/week8/polymerBS.html
@@ -18,6 +18,20 @@
          </section>
         <ul style="display:{{curr.selected | fooBar}}" >
           <div style="display:{{!curr.isLight | fooBar}}">
+            <li>
+              Use Texture
+                <input onclick="glShapes.renderOnce()" type="checkbox" checked="{{curr.useTexture}}">
+                <!--<template if="{{!curr.useTexture}}"> </template>-->
+                <template if="{{curr.useTexture}}">
+                  <select id="comboA" descript="{{ curr.name }}" on-change={{changeTex}}>
+                    <option value="../imgs/earth2.jpg">earth</option>
+                    <option value="../imgs/brick.jpg">brick</option>
+                    <option value="../imgs/wood.jpg">wood</option>
+                    <option value="../imgs/rubber.jpg">rubber</option>
+                    <option value="checkerBoard">checkerBoard</option>
+                  </select>
+                </template>
+            </li>
             <li>rotation: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.rotation}}" min=-360 max=360>
               {{curr.rotation}}</li>
             <li>scaleX: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.scale[0]}}" min=0.1 max=3 step=0.000001>
@@ -41,16 +55,9 @@
           <li>centerZ: <input oninput="glShapes.renderOnce()" type="range" value="{{curr.center[2]}}" min=-10 max=10 step=0.000001>
             {{curr.center[2]}}</li>
           <li>
-              <!--<template if="{{!curr.wireFrame}}">Wireframe</template>
-              <template if="{{curr.wireFrame}}">No Wireframe</template>
-              -->
               WireFrame:
               <input onclick="glShapes.renderOnce()" type="checkbox" checked="{{curr.wireFrame}}">
               <br>
-          </li>
-          <li>
-            Use Texture
-              <input onclick="glShapes.renderOnce()" type="checkbox" checked="{{curr.useTexture}}">
           </li>
           <section on-click={{rmSelected}} descript="{{ curr.name }}" style="display:{{!curr.isLight | fooBar}}">
            <button>remove</button>
@@ -97,7 +104,19 @@
           }
           if(this.shapes.length > 0 ){ this.shapes[this.shapes.length-1].selected = true}
           glShapes.renderOnce()
-      }
+      },
+      changeTex: function(e, detail, sender){
+        console.log(sender)
+          var name = sender.getAttribute('descript')
+          for(var i=0; i<this.shapes.length; i++){
+            var sh = this.shapes[i]
+            if(sh.name == name){
+              //console.log('hello')
+              //console.log( sender.options[ sender.selectedIndex ].value )
+              sh.texture = sender.options[ sender.selectedIndex ].value
+            }
+          }  
+      },
     });
   </script>
 </polymer-element>  
