--- a/week8/shapes.html
+++ b/week8/shapes.html
@@ -25,7 +25,7 @@
     <div>
       Cody Smith <br>
       Interactive Computer Graphics with WebGL <br>
-      Assignment 4. Shapes with shading and multiple lights<br>
+      Assignment 5. Shapes with textures<br>
       July 2015 <br>
   </div>
   <br>
