--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@ Cody's Coursera Webgl Homework
           <li>a <a href="week4/draw.html"> Drawing program</a></li>
         </ul>
       </li>
+      <li> Week 5
+        <ul> 
+          <li>a <a href="week5/shapes.html"> Different Shapes</a></li>
+        </ul>
+      </li>
+      <li> Week 6
+        <ul> 
+          <li>a <a href="week6/shapes.html"> Lighting</a></li>
+        </ul>
+      </li>
+      <li> Week 8
+        <ul> 
+          <li>a <a href="week8/shapes.html"> Textures</a></li>
+        </ul>
+      </li>
+      <li> extra
+        <ul> 
+          <li>a <a href="weekX/hough3.html"> Hough Transform</a></li>
+        </ul>
+      </li>
+      <li> extra
+        <ul> 
+          <li>a <a href="week1/sand.html"> Abelian Sand Pile in GPU</a></li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
