--- a/week8/polymerBS.html
+++ b/week8/polymerBS.html
@@ -3,6 +3,11 @@
 
 <polymer-element name="shape-menu">  
   <template>
+    <style>
+      :host {
+        padding:0px;
+      }
+    </style>
     <button onclick="glShapes.addShape('sphere')">add sphere</button>
     <button onclick="glShapes.addShape('cone')">add cone</button>
     <button onclick="glShapes.addShape('cylinder')">add cylinder</button>
@@ -12,7 +17,7 @@
     <template repeat="{{ curr in shapes }}">
       <div style="   border-style: solid; border-width: 1px; border-radius:10px;">
         <section on-click={{rowSelected}} descript="{{ curr.name }}">
-          <div style=" padding: 10px; background-color: #222">
+          <div style=" padding: 3px; background-color: #555">
                        {{ curr.name }}
           </div>
          </section>
