--- a/week1/sand.html
+++ b/week1/sand.html
@@ -158,7 +158,7 @@ void main() {
 
 <body>
 zoom: <input type=range min=0.25 max=30 step=0.1 value=3 oninput="projectionMatrix[0][0] = projectionMatrix[1][1] =  Number(this.value)"></input>
-speed: <input type=range min=1 max=300 step=1 value=1 oninput="speedMult =  Number(this.value)"></input>
+speed: <input type=range min=1 max=7 step=0.01 value=1 oninput="speedMult = Math.round(Math.pow(Number(this.value),2))"></input>
 
 <br>
 <canvas id="gl-canvas" width="512" height="512">
